19 July 2012: Willem
	- Fix for VU#624931 CVE-2012-2978: NSD denial of service 
	  vulnerability from non-standard DNS packet from any host
	  on the internet.
	  http://www.nlnetlabs.nl/downloads/CVE-2012-2978.txt

18 July 2012: Wouter
	- Fix bug#460: man page correction - identity.

9 July 2012: Wouter
	- delete temporary transfer files on exit of xfrd and reload.
	- when tasks are applied, reload checks if it must exit between
	  tasks, so that it can quickly exit when NSD is told to quit.
	- fix bug in apply_xfr that must use an udb_ptr because it shifts
	  when new allocations are made.

6 July 2012: Wouter
	- add xfrdir: "/tmp" option and configure --with-xfrdir="/tmp".
	  The nsd.task files and a subdirectory for zone transfers are
	  created there.

2 July 2012: Wouter
	- fix checkconf unit test and add test for backwards compatibility
	  for difffile: "x" statement.

29 June 2012: Wouter
	- Implemented /tmp/nsd.xfr.xxx/ to replace ixfr.db.  So that nsdc
	  patch is no longer needed.

8 June 2012: Wouter
	- Fix tpkg test cutest_qroot and rr-test for prinout of algorithms
	  as numbers, and copy of DO flag to the answer.
	- pick up fd fix from 3_2 branch: Some more fd >= 0 to fd != -1 fixes

31 May 2012: Matthijs
	- Sync with 3.2 branch

24 February 2012: Wouter
	- Fix for qtype ANY for a wildcard domain in NSEC signed zone.

9 February 2012: Wouter
	- Update acxnlnetlabs.m4 version 21, fixed MEMCMP_BROKEN #undef line.

23 January 2012: Wouter
	- remove clang security warning about %n in format string.

20 January 2012: Wouter
	- Fix bug #430: segfault when MAX_INTERFACES set to more than 65K.
	- Fix configure for OpenIndiana sunos 5.11, acx_nlnetlabs.m4 update.

12 January 2012: Matthijs
        - Fix bug #421: truncate pidfile on shutdown, before unlink.

10 January 2012: Wouter
	- removed unused variables.

10 November 2011: Wouter
	- acxnlnetlabs.m4 updated to version 16, better lto check (a.out drop).

3 November 2011: Wouter